Mon Dec 28 22:01:58 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/ruby/test_marshal.rb: added tests for taintness propagation.

Thu Dec 24 12:08:00 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/delegate.rb (marshal_dump/load): dump & load instance variables
	  by default [ruby-core:24211]

Wed Dec 23 20:48:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (args): splat other than direct array literal.
	  [ruby-dev:39771]

Wed Dec 23 17:23:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_load): initialize orig_func.   [ruby-core:27296]

Tue Dec 22 10:59:56 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/net/http/test_post_io.rb: parse chunked stream to avoid client
	  side connection error raised.

Mon Dec 21 15:27:48 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/stringio/stringio.c (strio_getline): fix for "" as separator.
	  [ruby-dev:34591] (Backport r17739 by Yusuke Endoh from trunk).

Mon Dec 21 15:20:42 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* test/openssl/{common.pem,max.pem}: added fixture certificates.
	  needed for new tests added on Sun Dec 13 23:07:05 2009.

Mon Dec 21 08:15:31 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* object.c: Object#initialize accepts any number of arguments
	  [ruby-core:27080]

Sun Dec 20 23:43:46 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/net/http.rb (HTTPGenericRequest#send_request_with_body_stream):
	  increased encoding chunk size for POST request with body_stream
	  (1K -> 16K). patched by Brian Candler. #1284.

	* test/net/http/test_post_io.rb: added for the patch. It's good if a
	  patch comes with a test.

Sat Dec 19 09:31:25 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/set.rb (initialize): Add check that argument is enumerable

Wed Dec 16 16:57:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/un.rb (httpd): try to convert port number to integer.
