@@ -25,7 +25,7 @@ module REXML
   COPYRIGHT = "Copyright \xC2\xA9 2001-2006 Sean Russell <ser@germane-software.com>"
   VERSION = "3.1.7.3"
   DATE = "2007/275"
-  REVISION = "$Revision$".gsub(/\$Revision:|\$/,'').strip
+  REVISION = %w$Revision$[1] || ''
 
   Copyright = COPYRIGHT
   Version = VERSION
